1998-10-18  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* FLIM: Version 1.11.0 (Yamadagawa) was released.

1998-10-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-ja.sgml, mime-en.sgml (entity formatting): Add description
	about `mime-insert-text-content'.

1998-10-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-ja.sgml, mime-en.sgml (entity formatting): New node; move
	`mime-insert-header' from `Entity-header'; move
	`default-mime-charset' from `custom'.

1998-10-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-en.sgml, mime-ja.sgml (Entity-header): Generic function
	`mime-insert-decoded-header' was renamed to `mime-insert-header'.

1998-10-17  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* NEWS: New file.

1998-10-16  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime.el (mime-insert-header): Renamed from
	`mime-insert-decoded-header'; define `mime-insert-decoded-header'
	as an obsolete alias.

	* mmgeneric.el, mmcooked.el (insert-header): Renamed from
	`insert-decoded-header'.

	* README.en (Installation): Add required version of APEL.

1998-10-16  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mel-g.el: Require mel.

	* mel-g.el: Require poem instead of emu.

1998-10-16  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime.el (mime-insert-text-content): New generic function.

	* mmcooked.el, mmgeneric.el (insert-text-content): New method.

1998-10-02  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* std11.el (std11-unfold-string): New implementation.

1998-10-02  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mmgeneric.el: New module.

	* mmbuffer.el: Use `generic' as mother backend.

	* FLIM-ELS (flim-modules): Add mmgeneric.

1998-10-01  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mime-parse.el (mime-parse-message): Modify for
	`make-mime-entity-internal'.

	* mime-def.el (make-mime-entity-internal): Change interface to be
	able to specify original-header and parsed-header.

1998-09-30  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
